Name:                texture-synthesis

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1.0.0

Synopsis:            Texture synthesis

-- Description:         

License:             BSD3
License-file:        LICENSE
Author:              Conrad Parker
Maintainer:          conrad@metadecks.org
Stability:           Experimental
Category:            Graphics

Cabal-version:       >=1.8
Build-type:          Simple

flag splitBase
  description: Use the split-up base package.

Library
  if flag(splitBase)
    build-depends:
      base >= 3 && < 6
  else
    build-depends:
      base < 3

  Exposed-modules:
    Graphics.TextureSynthesis

  Build-depends:
    containers                >= 0.2     && < 0.5
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
Executable texture-synthesis
  Main-is:             texture-synthesis.hs
  Hs-Source-Dirs:      ., tools

  if flag(splitBase)
    build-depends:
      base >= 3 && < 6
  else
    build-depends:
      base < 3

  Build-Depends:
    containers                >= 0.2     && < 0.5
