Name:                texture-synthesis

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1.0.0

Synopsis:            Texture synthesis

-- Description:         

License:             BSD3
License-file:        LICENSE
Author:              Conrad Parker
Maintainer:          conrad@metadecks.org
Stability:           Experimental
Category:            Graphics

Cabal-version:       >=1.8
Build-type:          Simple

flag splitBase
  description: Use the split-up base package.

Library
  if flag(splitBase)
    build-depends:
      base >= 3 && < 6
  else
    build-depends:
      base < 3

  Exposed-modules:
    Graphics.TextureSynthesis

  Build-depends:
    blaze-builder,
    bytestring                >= 0.9     && < 0.10,
    containers                >= 0.2     && < 0.5,
    iteratee                  >= 0.8.6.0 && < 0.9,
    mtl                       >= 2.0.0.0 && < 3,
    mwc-random,
    parallel,
    primitive,
    zoom-cache                >= 1.0.0.0 && < 1.1.0.0
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
Executable texture-synthesis
  Main-is:             texture-synthesis.hs
  Hs-Source-Dirs:      ., tools

  if flag(splitBase)
    build-depends:
      base >= 3 && < 6
  else
    build-depends:
      base < 3

  Build-Depends:
    blaze-builder,
    bytestring                >= 0.9     && < 0.10,
    containers                >= 0.2     && < 0.5,
    data-default,
    iteratee                  >= 0.8.6.0 && < 0.9,
    mtl                       >= 2.0.0.0 && < 3,
    mwc-random,
    parallel,
    primitive,
    ui-command,
    time,
    zoom-cache                >= 1.0.0.0 && < 1.1.0.0

Test-suite tests
  Type:              exitcode-stdio-1.0
  Hs-source-dirs:    tests
  Main-is:           Properties.hs
  Build-depends:
    base >= 3 && < 6,
    test-framework             >= 0.3.3 && < 0.5,
    test-framework-quickcheck2 >= 0.2.9 && < 0.3,
    QuickCheck                 >= 2.4.0.1,
    random                     == 1.0.*,
    texture-synthesis
